Fix for issue #3 (addition) -  make sure all content is visible past floating footer

--- a/src/main/webapp/public/css/dukecon.css
+++ b/src/main/webapp/public/css/dukecon.css
@@ -155,6 +155,10 @@ input[type="checkbox"]:checked + label:before {
     min-width: 250px;
 }
 
+.content {
+    margin-bottom:2.5em;
+}
+
 #nav {
     margin-left:5px;
     margin-right: 5px;
